# guideforcoach

./: .gitignore  main.py  main_agent.py  main_pipeline.py  pyproject.toml  resultfilecreate.py
api/: cache.py  main.py  schemas.py  validators.py
api/routers/: agent.py  pipeline.py
data/test/: datacleaned.csv
guideforcoach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: answer.md  dataclean.ipynb  inferencetest.py  nodestest.ipynb  testdirector.py  testtavily.py  train_similarity.ipynb
reports/: Ali_Abdi_20260227_202049.md  Matthis_Abline_20260227_201716.md  Nabil_Aberdin_20260228_090413.md
src/: config.py  model.py  preprocess.py
src/agents/: graph.py  nodes.py  state.py
